# QJobViewer

./: CMakeLists.txt  buttonedcombobox.cpp  buttonedcombobox.h  buttonedcombobox.ui  jobfetcher.cpp  jobfetcher.h  jobmodel.cpp  jobmodel.h  main.cpp  qjobviewer.cpp  qjobviewer.h  qjobviewer.ui  resultsitem.cpp  resultsitem.h  test.json  testresultsmodel.cpp  testresultsmodel.h
